# Tamaya

./: .gitignore  .lintstagedrc.json  CLAUDE.md  DESIGN.md  LICENSE  README.md  VERIFICATION.md  index.html  medlife-design.html  package.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a7b8c9d0e1f2_clova_settings.py  f6a7b8c9d0e1_qualitative_signals.py
backend/app/: main.py
backend/app/application/service/: clova_connection_tester.py  coaching_ai_service.py  signal_extraction_service.py
backend/app/application/usecase/: coaching_agent.py  extract_signals.py  finalize_diary.py  game_diary_complete.py  get_monthly_insight.py  get_weekly_insight.py  health_chat_agent.py  insight_result.py  list_diaries.py  send_coaching_message.py  test_clova_connection.py
backend/app/domain/model/: clova_setting.py  coaching_session.py  event_chunk.py  game_progress.py  qualitative_signal.py  routine.py  user_session.py  (+1 more)
backend/scripts/: ingest_health_data.py  seed_demo_signals.py
backend/tests/application/: test_coaching_agent.py  test_extract_signals.py  test_get_insight.py  test_send_coaching_message.py
backend/tests/domain/: test_clova_credential.py  test_coaching_session.py  test_guardrail_regression.py  test_insight_period.py  test_medical_guardrail.py  test_wellbeing_score.py
backend/tests/infrastructure/: test_byok_client.py  test_clova_connection_tester.py  test_coaching_clova.py  test_signal_extraction_clova.py
backend/tests/presentation/: test_coaching_router.py  test_insight_router.py  test_settings_router.py
(+67 files in other folders)
